Moved build process to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,8 @@
 language: java
-script: ./travis.build.sh
+before-script:
+  - wget https://dl.dropboxusercontent.com/u/55284851/MineBuilder/MBServerApi-beta.zip
+  - unzip -j MBServerApi-beta.zip MBServerAPI.jar
+  - find src/ 2>&1 | grep .java > sources.txt
+  - mkdir classes
+script:
+  - javac -cp ./MBServerAPI.jar:. -d classes -sourcepath src @sources.txt
