When will I stop failing configuring travis? O.o

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: java
-before-script:
+before_script:
   - 'wget https://dl.dropboxusercontent.com/u/55284851/MineBuilder/MBServerApi-beta.zip'
   - 'unzip -j MBServerApi-beta.zip MBServerAPI.jar'
   - 'find src/ 2>&1 | grep .java > sources.txt'
