--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: java
 before_script:
   - 'wget https://dl.dropboxusercontent.com/u/55284851/MineBuilder/MBServerApi-beta.zip'
-  - 'unzip -j MBServerApi-beta.zip MBServerAPI.jar'
+  - 'unzip -jv MBServerApi-beta.zip MBServerAPI.jar'
   - 'find src/ 2>&1 | grep .java > sources.txt'
-  - 'mkdir classes'
+  - 'mkdir -v classes'
 script:
-  - 'javac -cp ./MBServerAPI.jar:. -d classes -sourcepath src @sources.txt'
+  - 'javac -cpv ./MBServerAPI.jar:. -d classes -sourcepath src @sources.txt'
