--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ before_script:
   - 'find src/ 2>&1 | grep .java > sources.txt'
   - 'mkdir -v classes'
 script:
-  - 'javac -v -cp ./MBServerAPI.jar:. -d classes -sourcepath src @sources.txt'
+  - 'javac -verbose -cp ./MBServerAPI.jar:. -d classes -sourcepath src @sources.txt'
