--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 before_script:
   - 'wget https://dl.dropboxusercontent.com/u/55284851/MineBuilder/MBServerApi-beta.zip'
-  - 'unzip -jv MBServerApi-beta.zip MBServerAPI.jar'
+  - 'unzip -j MBServerApi-beta.zip MBServerAPI.jar'
   - 'find src/ 2>&1 | grep .java > sources.txt'
   - 'mkdir -v classes'
   - 'ls -lh'
