New travis build script

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: java
+jdk:
+  - oraclejdk6
 before_script:
-  - 'wget https://dl.dropboxusercontent.com/u/55284851/MineBuilder/MBServerApi.zip'
-  - 'unzip -j MBServerApi.zip MBServerAPI.jar'
+  - 'wget https://dl.dropboxusercontent.com/u/55284851/MineBuilder/MBServerApi-beta.jar'
   - 'find src/ 2>&1 | grep .java > sources.txt'
   - 'mkdir -v classes'
-  - 'ls -lh'
 script:
-  - 'javac -cp ./MBServerAPI.jar:. -d classes -sourcepath src @sources.txt'
+  - 'javac -cp ./MBServerApi-beta.jar:. -d classes -sourcepath src @sources.txt'
